RESOLVED FIXED239095
REGRESSION (249029@main): http/wpt/cache-storage/cache-storage-networkprocess-crash.html is a flaky CRASH with ASSERTION FAILED: m_pageMap.isEmpty()
https://bugs.webkit.org/show_bug.cgi?id=239095
Summary REGRESSION (249029@main): http/wpt/cache-storage/cache-storage-networkprocess...
Truitt Savell
Reported 2022-04-11 16:32:46 PDT
Created attachment 457298 [details] crash log Hardware: Macmini9,1 Architecture: arm64 OS: Monterey E Style: debug Flavor wk2 SDK: None ----------------------------- Most recent failures: 249029: https://commits.webkit.org/249029@main ----------------------------- Last success: 249027: https://commits.webkit.org/249027@main http/wpt/cache-storage/cache-storage-networkprocess-crash.html History: https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fcache-storage%2Fcache-storage-networkprocess-crash.html log: stderr: MessageReceiveQueueMap::addImpl - adding duplicate any id receiver 20 ASSERTION FAILED: m_pageMap.isEmpty() /Volumes/Data/worker/monterey-debug/build/Source/WebKit/WebProcess/WebProcess.cpp(877) : virtual bool WebKit::WebProcess::shouldTerminate() 1 0x152bd9ab4 WTFCrash 2 0x12bb55a60 std::__1::optional<std::__1::tuple<WTF::ObjectIdentifier<WebCore::PageIdentifierType>, WebKit::WebWheelEvent, WebCore::RectEdges<bool> > > IPC::Decoder::decode<std::__1::tuple<WTF::ObjectIdentifier<WebCore::PageIdentifierType>, WebKit::WebWheelEvent, WebCore::RectEdges<bool> > >() 3 0x12daae81c WebKit::WebProcess::shouldTerminate() 4 0x12d0694f0 WebKit::AuxiliaryProcess::enableTermination() results:
Attachments
crash log (5.42 KB, text/plain)
2022-04-11 16:32 PDT, Truitt Savell
no flags
Patch (3.14 KB, patch)
2022-04-13 09:15 PDT, youenn fablet
no flags
Patch (3.14 KB, patch)
2022-04-13 23:20 PDT, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2022-04-11 16:33:25 PDT
Truitt Savell
Comment 2 2022-04-11 16:39:31 PDT
https://github.com/WebKit/WebKit/commit/47d33678ceceb0b0d38b8fda2d6ad7c7ba5aa266 this commit is close to the regression point for this test and seems like I could be related.
Truitt Savell
Comment 3 2022-04-11 16:45:53 PDT
Marked this test as failing while it is investigated.
Truitt Savell
Comment 4 2022-04-11 16:46:12 PDT
Ryan Haddad
Comment 5 2022-04-11 16:53:30 PDT
(In reply to Truitt Savell from comment #2) > https://github.com/WebKit/WebKit/commit/ > 47d33678ceceb0b0d38b8fda2d6ad7c7ba5aa266 > > this commit is close to the regression point for this test and seems like I > could be related. https://commits.webkit.org/249022@main seems slightly more related, but I haven't tried to repro.
Alexey Proskuryakov
Comment 6 2022-04-12 14:28:48 PDT
The full crash log shows that it's in service worker code, so I'm going with https://commits.webkit.org/249029@main
youenn fablet
Comment 7 2022-04-13 08:29:39 PDT
It seems we are now calling WebSWContextManagerConnection::close multiple times, which we should probably not.
youenn fablet
Comment 8 2022-04-13 09:15:59 PDT
youenn fablet
Comment 9 2022-04-13 23:20:50 PDT
EWS
Comment 10 2022-04-14 08:49:30 PDT
Committed r292869 (249640@main): <https://commits.webkit.org/249640@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457537 [details].
Note You need to log in before you can comment on or make changes to this bug.