REGRESSION (249029@main): http/wpt/cache-storage/cache-storage-networkprocess-crash.html is a flaky CRASH with ASSERTION FAILED: m_pageMap.isEmpty() https://bugs.webkit.org/show_bug.cgi?id=239095 <rdar://problem/91595784>

Reviewed by Chris Dumez.

We send the same IPC message to close WebSWContextManagerConnection from either network process or UIProcess.
To prevent closing twice the same connection, we exit early if the connection is closed.

Covered by existing tests.

* WebProcess/Storage/WebSWContextManagerConnection.cpp:
* WebProcess/Storage/WebSharedWorkerContextManagerConnection.cpp:

Canonical link: https://commits.webkit.org/249640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292869 268f45cc-cd09-0410-ab3c-d52691b4dbfc